Fix Mobile Responsive

--- a/final-project/src/layouts/Layout.astro
+++ b/final-project/src/layouts/Layout.astro
@@ -33,6 +33,7 @@ import Footer from "../components/Footer.astro";
 		margin: 0;
 		padding: 0;
 		box-sizing: border-box;
+		display: inline-block;
 	}
 
 	/* Basic settings for HTML */
@@ -52,7 +53,7 @@ import Footer from "../components/Footer.astro";
 		color: #333; /* Default text color */
 		background-color: #fff; /* Default background color */
 		text-rendering: optimizeSpeed;
-		-webkit-font-smoothing: antialiased; /* Enable smooth font rendering */
+		-webkit-font-smoothing: antialiased; Enable smooth font rendering
 	}
 
 	/* Remove default styles for lists */
