Fix Mobile Responsive

--- a/final-project/src/layouts/Layout.astro
+++ b/final-project/src/layouts/Layout.astro
@@ -33,7 +33,9 @@ import Footer from "../components/Footer.astro";
 		margin: 0;
 		padding: 0;
 		box-sizing: border-box;
+		@media (max-width: 600px) {
 		display: inline-block;
+	}
 	}
 
 	/* Basic settings for HTML */
@@ -174,4 +176,6 @@ import Footer from "../components/Footer.astro";
 		width: 0;
 		height: 0;
 	}
+
+
 </style>
